# spark_engine

./: .gitmodules  CMakeLists.txt  LICENSE  build.bat  build.sh
spark_engine/: CMakeLists.txt
spark_engine/src/: application.cpp  application.h  entry_point.h  log.cpp  log.h  spark.h
spark_engine/src/events/: event.h
test_game/src/: test_game.cpp
tmp/linux/: CMakeCache.txt  Makefile  cmake_install.cmake
tmp/linux/test_game/: CMakeCache.txt  Makefile  cmake_install.cmake
tmp/linux/test_game/spark_engine/: Makefile  cmake_install.cmake
